--- a/endnote.bib
+++ b/endnote.bib
@@ -1261,3 +1261,21 @@ Publisher: American Psychological Association},
 	keywords = {morality, competence, threat, deviance, exclusion, intragroup processes},
 	file = {Snapshot:/home/hcp4715/Zotero/storage/2DBJWIKZ/ejsp.html:text/html;Full Text:/home/hcp4715/Zotero/storage/6TXIQYWG/Lee et al. - 2017 - In or out How the perceived morality (vs. compete.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/MJPH3L8T/ejsp.html:text/html}
 }
+
+
+@article{dang_why_2020,
+	title = {Why Are Self-Report and Behavioral Measures Weakly Correlated?},
+	volume = {24},
+	issn = {13646613},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1364661320300255},
+	doi = {10.1016/j.tics.2020.01.007},
+	pages = {267--269},
+	number = {4},
+	journaltitle = {Trends in Cognitive Sciences},
+	shortjournal = {Trends in Cognitive Sciences},
+	author = {Dang, Junhua and King, Kevin M. and Inzlicht, Michael},
+	urldate = {2020-07-13},
+	date = {2020-04},
+	langid = {english},
+	file = {Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:/home/hcp4715/Zotero/storage/W45PPDRD/Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:application/pdf}
+}
